--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -16,6 +16,9 @@ jobs:
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+      - 
+        name: Running Unit-test cases
+        run: pytest Test_Cases/test.py
       -
         name: Set up Docker Build
         uses: docker/setup-buildx-action@v2
