--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -18,7 +18,10 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - 
         name: Running Unit-test cases
-        run: pytest Test_Cases/test.py
+        
+        run: |
+            python3 -m pip install pytest
+            python3 -m pytest Test_Cases/test.py
       -
         name: Set up Docker Build
         uses: docker/setup-buildx-action@v2
